--- a/style.css
+++ b/style.css
@@ -367,3 +367,78 @@ a {
   color: #f5f5f5;
 }
 /*                      TESTS =========================== */
+
+.now-playing {
+  width: 110px;
+}
+
+.playpause-track i {
+  font-size: 2.5em;
+  margin-top: 15px;
+
+}
+
+.playpause-track {
+  margin-top: 20px;
+
+}
+
+
+.volume {
+  margin: 0px 5px;
+  opacity: 0.5;
+}
+
+.volume:hover {
+  opacity: 0.75;
+}
+
+.seek_slider{
+  margin: 15px 20px;
+  width: 300px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  height: 5px;
+  background: black;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+
+
+.volume_slider{
+    margin: 15px 20px;
+    width: 125px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    height: 5px;
+    background: black;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+  }
+
+/* Modify the appearance of the slider thumb */
+.seek_slider::-webkit-slider-thumb,
+.volume_slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 15px;
+  height: 15px;
+  background: white;
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+
+
+
+
+
+
+
+
