--- a/Registrieren/registrieren.css
+++ b/Registrieren/registrieren.css
@@ -82,7 +82,7 @@ span {
   color: gray;
 }
 
-.button-style {
+.log-in {
   height: 400px;
   display: grid;
   place-items: center;
@@ -98,11 +98,26 @@ span {
 #password {
   font-family: "Montserrat", sans-serif;
   color: black;
-  height: 30px;
+  height: 40px;
   width: 400px;
   border-radius: 5px;
   margin-bottom: 30px;
   margin-top: 10px;
   font-size: 20px;
   padding-left: 10px;
+}
+
+#button-style {
+  width: 120px;
+  height: 50px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.2em;
+  font-weight: bold;
+  border-radius: 9px;
+}
+
+#button-style:hover {
+  background-color: #dda15e;
+  color: #003049;
+  font-size: 1.4em;
 }
