--- a/Registrieren/registrieren.css
+++ b/Registrieren/registrieren.css
@@ -90,7 +90,7 @@ span {
 }
 
 #h3 {
-  margin-top: 30px;
+  margin: 20px 0 30px 0;
 }
 
 #username,
@@ -103,21 +103,72 @@ span {
   border-radius: 5px;
   margin-bottom: 30px;
   margin-top: 10px;
-  font-size: 20px;
+  font-size: 14px;
   padding-left: 10px;
+}
+
+fieldset {
+  border: none;
+  background: #efefef;
+  margin-bottom: 0.5rem;
+}
+
+legend {
+  padding: 20px 0 20px 0;
+}
+
+.input-date,
+select {
+  font-family: "Roboto", sans-serif;
+  border: solid 1px #89a6bb;
+  padding: 0.5rem;
+  border-radius: 3px;
+  -webkit-appearance: none;
+}
+
+h2 {
+  margin: 3rem 0 1rem;
+}
+
+.date-field {
+  width: 30px;
+  text-align: center;
+}
+
+.single-date-field {
+  width: 120px;
+}
+
+.field-inline-block {
+  display: inline-block;
+  margin-right: 5px;
+  margin-left: 5px;
+}
+
+.gender {
+  padding: 30px 0 20px 0;
 }
 
 #button-style {
   width: 120px;
-  height: 50px;
+  height: 60px;
   font-family: "Montserrat", sans-serif;
   font-size: 1.2em;
   font-weight: bold;
-  border-radius: 9px;
+  border-radius: 35px;
+  background-color: green;
+  margin: 30px 0 10px 0;
 }
 
 #button-style:hover {
-  background-color: #dda15e;
-  color: #003049;
+  color: white;
   font-size: 1.4em;
+}
+
+.logInLink {
+  color: rgb(71, 183, 71);
+}
+
+.logInText {
+  padding: 0px 0 30px 0;
 }
