--- a/Registrieren/registrieren.css
+++ b/Registrieren/registrieren.css
@@ -99,7 +99,7 @@ span {
   font-family: "Montserrat", sans-serif;
   color: black;
   height: 40px;
-  width: 400px;
+  width: 600px;
   border-radius: 5px;
   margin-bottom: 30px;
   margin-top: 10px;
@@ -111,7 +111,7 @@ span {
   font-family: "Montserrat", sans-serif;
   color: black;
   height: 40px;
-  width: 400px;
+  width: 600px;
   border-radius: 5px;
   margin-bottom: 10px;
   margin-top: 10px;
@@ -166,6 +166,19 @@ h2 {
 
 .gender {
   padding: 20px 0 20px 0;
+}
+
+.check-list {
+  height: 200px;
+  width: 600px;
+  margin: 20px 0 20px 0;
+  padding: 10px;
+}
+
+#ch-li1,
+#ch-li2,
+#ch-li3 {
+  margin: 10px 0 10px 0;
 }
 
 #button-style {
